--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <h1>Harshit Rajput</h1>
             </div>
             <div class="bio">
-                <h3>Frontend Developer</h3>
-                <h3>UX Designer</h3>
+                <h3>Full Stack Web Developer</h3>
             </div>
             <div class="but">
                 <button class="b1" onclick="openModal()">
