--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         </div>
         <div class="social">
             <div class="icons" id="a">
-                <a href=""><i class="fa-brands fa-facebook-f fa-2xl" style="color: #005eff;"></i></a> 
+                <a href="https://www.facebook.com/profile.php?id=100053844352750"><i class="fa-brands fa-facebook-f fa-2xl" style="color: #005eff;"></i></a> 
             </div>
             <div class="icons" id="b">
-                <a href=""><i class="fa-brands fa-twitter fa-2xl" style="color: #70a5ff;"></i></a>
+                <a href="https://twitter.com/harshit_raj_02"><i class="fa-brands fa-twitter fa-2xl" style="color: #70a5ff;"></i></a>
             </div>
             <div class="icons" id="c">
-                <a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #fd2666;"></i></i></a>
+                <a href="https://instagram.com/_harsh.itrajput_"><i class="fa-brands fa-instagram fa-2xl" style="color: #fd2666;"></i></i></a>
             </div>
             <div class="icons" id="d">
-                <a href=""><i class="fa-brands fa-whatsapp fa-2xl" style="color: #33ff36;"></i></a>
+                <a href="tel: +919411847324"><i class="fa-brands fa-whatsapp fa-2xl" style="color: #33ff36;"></i></a>
             </div>
             <div class="icons" id="e">
                 <a href=""><i class="fa-brands fa-telegram fa-2xl" style="color: #9fc0f9;"></i></a>
